Refactor: Adhere to SonarLint quality recommendations in the test classes